--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <td>Game 1</td>
     </tr>
     <tr>
-      <td>Book 2/td>
+      <td>Book 2</td>
       <td>Movie 2</td>
       <td>Game 2</td>
     </tr>
     <tr>
       <td>Book 3</td>
-      <td>Movie 3/td>
+      <td>Movie 3</td>
       <td>Game 3</td>
     </tr>
   </table>
