--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
   <h1>Craig Fulgency</h1>
 
   <img src="http://lorempixel.com/400/200/sports/Dummy-Text/" alt="Craig Fulgency">
