--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Activity 1: Basic HTML Bio</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
